tests/Errors/Generic/Arrays/DisallowLongArraySyntax/Found.php
<?php

declare(strict_types=1);

$foo = array('foo', 'bar', 'baz');

var_export($foo);
